Adding to the homepage and need to style tablet size (and smaller), link animations, picture animations, spacing, and include fonts

--- a/index.html
+++ b/index.html
@@ -40,8 +40,53 @@
     <img class="home-display-image" src="placeholder.jpg"/>
     <div class="home-display-text">
         <p id="home-display-title">Charles John Quarto: Songwriter-Poet</p>
-        <p id="home-display-subtitle">New Collection Out Now. <a id="link" href="#">Shop All Songs.</a></p>
+        <p id="home-display-subtitle">New Collection Out Now. <a id="link" href="#">Shop All Songs .</a></p>
     </div>
+</div>
+
+<div class="container">
+  <div class="col-sm-6 col-xs-12">
+    <div class="img-wrapper">
+      <img class="img-thumbnail img-responsive" src="music.jpg"/>
+    </div>
+  </div>
+  
+  <div class="col-sm-6 col-xs-12">
+    <div class="thumbnail">
+      <p>Music and Discography</p>
+      <a class="home-img-links" href="#">View More</a>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="col-sm-6 col-xs-12">
+    <div class="thumbnail thumbnail-left">
+      <p>Poems and Collections</p>
+      <p><a class="home-img-links" href="#">View More</a></p>
+    </div>
+  </div>
+  
+  <div class="col-sm-6 col-xs-12">
+    <div class="img-wrapper">
+      <img alt="" class="img-thumbnail img-responsive" src="book.jpg"/>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="col-sm-6 col-xs-12">
+    <div class="img-wrapper">
+        <img class="img-thumbnail img-responsive" src="camera.jpg"/>
+      </div>
+  </div>
+    
+  <div class="col-sm-6 col-xs-12">
+    <div class="thumbnail">
+      <p>Photo Gallery</p>
+      <a class="home-img-links" href="#">View More</a>
+    </div>
+  </div>
 </div>
 
   
