Adding gallery, updating contact, updating index - bare bones styling right now

--- a/gallery.html
+++ b/gallery.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Contact</title>
+  <title>Photo Gallery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" media="screen" href="contact.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="gallery.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="home.css" />
   <script src="main.js"></script>
 </head>
 <body>
 
-  <!-- MAKE NAVBAR ACTUALLY WORK -->
+<!-- MAKE NAVBAR ACTUALLY WORK -->
 <nav class="navbar">
   <div class="container-fluid navbar-fluid-width">
     <div class="navbar-header navbar-header-button">
@@ -38,47 +38,27 @@
   </div>
 </nav>
 
-<div class="container container-5">
-
-  <div class="col-sm-8 col-sm-push-4">
-    <form>
-      <div class="form-row">
-        <h2>Get in Touch</h2>
-        <div class="form-group col-sm-6">
-          <label for="firstName">First Name *</label>
-          <input type="text" class="form-control" id="firstName" placeholder="First Name" required>
-        </div>
-        <div class="form-group col-sm-6">
-          <label for="lastName">Last Name</label>
-          <input type="text" class="form-control" id="lastName" placeholder="Last Name">
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="form-group col-md-12">
-          <label for="phoneNumber">Phone Number *</label>
-          <input type="tel" class="form-control" id="phoneNumber" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
-        </div>
-        <div class="form-group col-md-12">
-          <label for="subject">Subject *</label>
-          <input type="text*" class="form-control" id="subject" required>
-        </div>
-        <div class="form-group col-md-12">
-          <label for="message">Message *</label>
-          <textarea id="message" name="message" placeholder=" " style="height:170px" required></textarea>
-          </div>
-      </div>
-      <div class="form-group col-md-12">
-      <button class="button-submit" type="submit">Submit</button>
-    </div>
-    </form>
-  </div>
-
-  <div class="col-sm-4 col-sm-pull-8" id="photos">
-      <img src="placeholder.jpg">
-      <div id="po-text">PO BOX INFROMATION</div>
-  
-    </div>
-
+<div class="container">
+<div id="photos">
+    <img src="book.jpg">
+    <img src="music.jpg">
+    <img src="album.jpg">
+    <img src="camera.jpg">
+    <img src="water.jpg">
+    <img src="placeholder.jpg">
+    <img src="book.jpg">
+    <img src="music.jpg">
+    <img src="album.jpg">
+    <img src="camera.jpg">
+    <img src="water.jpg">
+    <img src="placeholder.jpg">
+    <img src="book.jpg">
+    <img src="music.jpg">
+    <img src="album.jpg">
+    <img src="camera.jpg">
+    <img src="water.jpg">
+    <img src="placeholder.jpg">
+</div>
 </div>
 
 <!-- FOOTERS -->
@@ -91,11 +71,9 @@
   </div>
   <i class="fab fa-facebook-f"></i>
 </footer>
-  
-    
-  
-  <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 </body>
 </html>
