--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-nav-demo">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">ABOUT</a></li>
+        <li><a href="about.html">ABOUT</a></li>
         <li><a href="#">WRITTEN WORKS</a></li>
         <li><a href="#">MUSIC</a></li>
         <li><a href="gallery.html">PHOTOGRAPHY</a></li>
@@ -83,15 +83,49 @@
 
 <!-- FOOTERS -->
 <footer class="footer">
-  <div class="container">
-    <div class="col-sm-4 col-sm-push-4 col-xs-12 middle">Charles John Quarto</div>
-    <div class="col-sm-4 col-sm-pull-4 col-xs-12 side">Nashville, TN</div>
-    <div class="col-sm-4 col-xs-12 side"><a href="contact.html">Contact</a></div>
-    <div class="col-xs-12 author">Website by Sara Hanson</div>
-  </div>
-  <i class="fab fa-facebook-f"></i>
-</footer>
+    <div class="container">
+      <div class="col-md-3 col-sm-6 col-xs-6">
+        <div class="footer-section">
+          Shop
+        </div>
+        <div class="footer-sub-section">
+         <div><a href="#">Music</a></div> 
+         <div> <a href="#">Poems</a></div> 
+         <div><a href="#">Collections</a></div> 
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 col-xs-6">
+        <div class="footer-section">
+          About
+        </div>
+        <div class="footer-sub-section">
+          <div><a href="#">Bio</a></div> 
+          <div><a href="#"><i class="fas fa-thumbtack"></i> Nashville, TN</a></div> 
+          <div><a href="#">Charles John Quarto</a></div> 
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 col-xs-6">
+        <div class="footer-section">
+          Connect
+        </div>
+        <div class="footer-sub-section">
+            <div><a href="contact.html">Contact</a></div> 
+            <div><a href="#"><i class="fab fa-facebook"></i> Facebook</a></div> 
+            <div><a href="#">Collections</a></div> 
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 col-xs-6">
+        <div class="footer-section">
+          Website by Sara Hanson
+        </div>
+        <div class="footer-sub-section">
+          <div><a href="https://github.com/sdhanson"><i class="fab fa-github"></i> Github</a></div> 
+          <div><a href="https://www.linkedin.com/in/sara-hanson-usc/"><i class="fab fa-linkedin"></i> LinkedIn</a></div> 
+        </div>
+      </div>
+    </div>
   
+  </footer>
     
   
   <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
