Updated collapsible content. Still much to do including GET THE FONT

--- a/about.html
+++ b/about.html
@@ -145,37 +145,37 @@
             <div>Patricia Conroy</div>
             <div>Maria Butterly</div>
             <div>Tony Rice &amp; the Rice Brothers</div> 
-            Hal Ketchum
-            Juniper L’Orange
-            Claire Hammill
-            Rick Beresford
-            Dianne Woody
-            Garth Brooks &amp; Tricia Yearwood
-            The Lost Gonzo Band
-            Shake Russell
-            Shake Russell &amp; Dana Cooper
-            Severin Browne
-            Pete Wasner
-            Scott Galbraith
-            Allan Thomas
-            Wendy Webb
-            Jim Ratts &amp; Runaway Express
-            The Corner Band
-            The Kingston Trio
-            Doug Gittings
-            Wildfire
-            Rhonda Vincent &amp; the Rage
-            Larry Weiss
-            Mark T. Jordan
-            The Princess &amp; the Frog
-            Mary McCaslin &amp; Jim Ringer
-            Jim Phillips
-            Melissa Javors
-            Fred Koller
-            Manfred Mann &amp; the Earth Band
-            Laurie Wheeler
-            Greg Trafiglio
-            Melanie
+            <div>Hal Ketchum</div>
+            <div>Juniper L’Orange</div>
+            <div>Claire Hammill</div>
+            <div>Rick Beresford</div>
+            <div>Dianne Woody</div>
+            <div>Garth Brooks &amp; Tricia Yearwood</div>
+            <div>The Lost Gonzo Band</div>
+            <div>Shake Russell</div>
+            <div>Shake Russell &amp; Dana Cooper</div>
+            <div>Severin Browne</div>
+            <div>Pete Wasner</div>
+            <div>Scott Galbraith</div>
+            <div>Allan Thomas</div>
+            <div>Wendy Webb</div>
+            <div>Jim Ratts &amp; Runaway Express</div>
+            <div>The Corner Band</div>
+            <div>The Kingston Trio</div>
+            <div>Doug Gittings</div>
+            <div>Wildfire</div>
+            <div>Rhonda Vincent &amp; the Rage</div>
+            <div>Larry Weiss</div>
+            <div>Mark T. Jordan</div>
+            <div>The Princess &amp; the Frog</div>
+            <div>Mary McCaslin &amp; Jim Ringer</div>
+            <div>Jim Phillips</div>
+            <div>Melissa Javors</div>
+            <div>Fred Koller</div>
+            <div>Manfred Mann &amp; the Earth Band</div>
+            <div>Laurie Wheeler</div>
+            <div>Greg Trafiglio</div>
+            <div>Melanie</div>
             </div>
           </div>
 
@@ -185,15 +185,48 @@
             <button class="button" data-toggle="collapse" data-target="#demo1">Charles John is available for teaching of poetry and song lyric. His metaphysical teachings include <i class="fas fa-plus"></i> </button>
   
             <div id="demo1" class="collapse">
-            Lorem ipsum dolor text....
+              <div>Meditation</div>
+              <div>Manifestations</div>
+              <div>Empowerment</div>
+              <div>Chakra Clearing</div>
+              <div>Earth Changes</div>
+              <div>Communicating with all of Nature</div>
+              <div>Ghost Removal</div>
+              <div>Finding Lost Pets</div>
+              <div>Releasing Ancient Burdens</div>
+              <div>Past Life Readings</div>
+              <div>Healing Techniques</div>
+              <div>Utilizing Color to Create Wonders</div>
+              <div>Learning Bird and Animal Languages</div>
+              <div>Teachings of all Quartz Crystals</div>
+              <div>Teachings of Stones</div>
+              <div>Creating Medicine Wheels</div>
+              <div>And hundreds of other topics</div>    
             </div>
-
           </div>
-
         </p>
 
         <p>
+          Charles John’s instruction comes through the Archangel Michael in ways unexpected and transcendent.
+          Further, there will be a weekly channeling of the Archangel Michael here in Nashville – for information,
+          contact Charles John at 615.352.8480.
+        </p>
 
+        <p>
+          Each day a new poem or song will appear on Charles John’s website, for your enjoyment. Formal
+          collections of his poems and songs also are available. The daily poems and songs are being shared
+          through the honor system. For those who would like to send a gratuity to support Charles John’s daily
+          labor of light, you may respond through the <a href="contact.html">contact page</a>.
+        </p>
+
+        <p>
+          Thank you,
+          <br>
+            Friends of Charles John Quarto
+        </p>
+
+        <p>
+          Charles John has written every day for a half century.
         </p>
 
     </div>
