Updating everything. Worked on poetry skeleton

--- a/about.html
+++ b/about.html
@@ -28,7 +28,13 @@
     <div class="collapse navbar-collapse" id="bs-nav-demo">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="about.html">ABOUT</a></li>
-        <li><a href="#">WRITTEN WORKS</a></li>
+        <li><a data-toggle="collapse" href="#sub-list">WRITTEN WORKS</a></li>
+        <!-- <div class="collapse" id="sub-list">
+          <ul ul class="nav">
+              <li><a href="#">POETRY</a></li>
+              <li><a href="#">LYRICS</a></li>
+            </ul>
+        </div> -->
         <li><a href="#">MUSIC</a></li>
         <li><a href="gallery.html">PHOTOGRAPHY</a></li>
         <li><a href="#">SHOP</a></li>
@@ -40,12 +46,12 @@
 
 <!--IMAGE AND BIO-->
 <div class="container-fluid container-bio">
-  <div class="col-md-3 col-xs-12">
+  <div class="col-md-4 col-xs-12">
     <div class="bio-image">
         <img class="pull-right-sm" src="album.jpg">
     </div>
   </div>
-  <div class="col-md-9 col-xs-12">
+  <div class="col-md-8 col-xs-12">
     <div class="bio-text">
         <p>
           <strong>Charles John Quarto</strong> is a mystic spiritual master, healer, psychic, poet, songwriter, philosopher, ally and advisor, on all matters vast. He began his performing career as a poet in Greenwich Village (his
