--- a/contact.html
+++ b/contact.html
@@ -39,11 +39,24 @@
 </nav>
 
 <div class="container container-5">
+  <div class="col-sm-1"></div>
 
-  <div class="col-sm-8 col-sm-push-4">
+  <div class="col-sm-3">
+    <h3>Contact Info</h3>
+    <div id="po-text">
+      Charles John Quarto<br>P.O. Box 120535<br>
+      Nashville, TN 37212
+    </div>
+    <div id="photo-text">
+      <br>
+          615-352-8480
+    </div>
+
+  </div>
+
+  <div class="col-sm-8">
     <form>
       <div class="form-row">
-        <h2>Get in Touch</h2>
         <div class="form-group col-sm-6">
           <label for="firstName">First Name *</label>
           <input type="text" class="form-control" id="firstName" placeholder="First Name" required>
@@ -73,13 +86,7 @@
     </form>
   </div>
 
-  <div class="col-sm-4 col-sm-pull-8" id="photos">
-      <img src="placeholder.jpg">
-      <div id="po-text">
-        Charles John Quarto<br>P.O. Box 120535<br>
-        Nashville, TN 37212</div>
-  
-    </div>
+
 
 </div>
 
