--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,7 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-nav-demo">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">ABOUT</a></li>
+        <li><a href="about.html">ABOUT</a></li>
         <li><a href="#">WRITTEN WORKS</a></li>
         <li><a href="#">MUSIC</a></li>
         <li><a href="gallery.html">PHOTOGRAPHY</a></li>
