--- a/about.html
+++ b/about.html
@@ -49,6 +49,12 @@
     </div>
   </nav>
 
+  <div class="container">
+    <div class="container container-title">
+       Charles John Quarto
+    </div>
+  </div>
+
 <!--IMAGE AND BIO-->
 <div class="container-fluid container-bio">
   <div class="col-md-4 col-xs-12">
