--- a/discography.html
+++ b/discography.html
@@ -86,28 +86,27 @@
 </div> -->
 
 <div class="container">
-    <div class="container dropdown-button col-xs-6 container-nav container-jump">
+    <div class="container dropdown-button col-sm-6 col-xs-6 container-nav container-jump">
         <div class="navbar-collapse dropdown-button-1" id="collapse-jump">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav navbar-nav-drop-1">
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Jump To <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Category <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li id="ex1"><a href="#">1</a></li>
-                  <li id="ex2"><a href="#">2</a></li>
-                  <li id="ex3"><a href="#">3</a></li>
-                  <li id="ex5"><a href="#">4</a></li>
+                  <li id="ex1"><a href="#">Albums</a></li>
+                  <li id="ex2"><a href="#">Singles</a></li>
+                  <li id="ex3"><a href="#">Collaborations</a></li>
                 </ul>
               </li>
             </ul>
           </div><!-- /.navbar-collapse -->
     </div>
-    <div class="container dropdown-button col-xs-6 container-nav container-jump">
+    <div class="container dropdown-button col-sm-6 col-xs-6 container-nav container-jump">
         <div class="navbar-collapse dropdown-button-2" id="collapse-jump">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav navbar-nav-drop-2">
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Jump To <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li id="ex1"><a href="#">1</a></li>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Year <b class="caret"></b></a>
+                <ul class="dropdown-menu dropdown-menu-2">
+                  <li id="ex1"><a class="here" href="#">1</a></li>
                   <li id="ex2"><a href="#">2</a></li>
                   <li id="ex3"><a href="#">3</a></li>
                   <li id="ex5"><a href="#">4</a></li>
@@ -119,13 +118,51 @@
   </div>
 
 
+<!-- MODAL CAROUSEL -->
+<!-- CREATE MODAL FIRST -->
+<div class="container container-modal">
+  <div id="myModal" class="modal" tabindex="-1" role="dialog" aria-labelledby="Albums">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content" tab-index="0">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span class="icon" aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body container-fluid">
+          <div class="col-sm-6 col-xs-12">
+              <img class="img-thumbnail img-album" src="album.jpg"/>
+          </div>
+          <div class="col-sm-6 col-xs-12 ">
+            <div class="modal-album">
+                <p class="modal-album-title">
+                    ALBUM TITLE
+                  </p>
+                  <p class="modal-album-body">
+                      DESCRIPTION
+                  </p>
+
+            </div>
+
+
+          </div>
+
+           
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 <!-- SHOP CARUSEL -->
 <div class="container container-disc">
 
     <div class="col-md-4 col-sm-6 col-xs-12">
       <a class="album" href=#>
         <div class="img-wrapper">
-          <img class="img-thumbnail img-responsive" src="album.jpg"/>
+          <img class="img-thumbnail img-responsive" data-toggle="modal" data-target=".modal" src="album.jpg"/>
         </div>
         <!-- <div class="album-text"> POETRY COLLECTION NAME </div> -->
       </a>
@@ -134,7 +171,7 @@
     <div class="col-md-4 col-sm-6 col-xs-12">
       <a class="album" href=#>
         <div class="img-wrapper">
-          <img class="img-thumbnail img-responsive" src="album.jpg"/>
+          <img class="img-thumbnail img-responsive" data-toggle="modal" data-target=".modal" src="album.jpg"/>
         </div>
         <!-- <div class="album-text"> POETRY COLLECTION NAME </div> -->
       </a>
@@ -143,7 +180,7 @@
     <div class="col-md-4 col-sm-6 col-xs-12">
       <a class="album" href=#>
         <div class="img-wrapper">
-          <img class="img-thumbnail img-responsive" src="album.jpg"/>
+          <img class="img-thumbnail img-responsive" data-toggle="modal" data-target=".modal" src="album.jpg"/>
         </div>
         <!-- <div class="album-text"> POETRY COLLECTION NAME </div> -->
       </a>
@@ -152,7 +189,7 @@
     <div class="col-md-4 col-sm-6 col-xs-12">
       <a class="album" href=#>
         <div class="img-wrapper">
-          <img class="img-thumbnail img-responsive" src="album.jpg"/>
+          <img class="img-thumbnail img-responsive" data-toggle="modal" data-target=".modal" src="album.jpg"/>
         </div>
         <!-- <div class="album-text"> POETRY COLLECTION NAME </div> -->
       </a>
